--- a/src/index.css
+++ b/src/index.css
@@ -19,62 +19,9 @@
   --color-gray-bg: #f8f8f8;
   --color-primary: #111827;
   --color-secoundary: #4b5563;
+  --color-darkSecoundart: #c3c6ca;
   --text-whitetext: #f8fafc;
   --color-border: #e5e7eb;
 }
 
-/* --------banner------- */
-
-.banner {
-  position: relative;
-}
-
-.banner .slick-dots {
-  display: flex !important;
-  gap: 12px;
-  position: absolute;
-  bottom: 30px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.banner .slick-dots li button {
-  font-size: 0;
-  width: 8px;
-  height: 8px;
-  border: 1px solid #111827;
-  border-radius: 50%;
-}
-
-.banner .slick-dots .slick-active button {
-  background: #111827;
-}
-
-
-/* ................Exploring css--- */
-
-.expo {
-  position: relative;
-}
-
-.expo .slick-dots {
-  display: flex !important;
-  gap: 12px;
-  position: absolute;
-  bottom: -40px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.expo .slick-dots li button {
-  font-size: 0;
-  width: 8px;
-  height: 8px;
-  background: var(--color-secoundary);
-  border-radius: 50%;
-}
-
-.expo .slick-dots .slick-active button {
-  background: #111827;
-}
 
